--- a/README
+++ b/README
@@ -52,5 +52,5 @@ python -m venv .venv
 source .venv/bin/activate   # (or .venv\Scripts\activate on Windows)
 pip install -r requirements.txt
 
-python src/main.py
+python src/run_all.py
 
